OSR2: Multiple changes

--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
@@ -24,6 +24,57 @@
 
           <div class="row">
             <div class="col-12">
+
+              <div class="panel mat-elevation-z1 mb-3">
+                <div class="panel-group">
+                <div class="group-label">
+                  <span class="label">Отключенное оборудование<br>по сети 35-150 кВ</span>
+                </div>
+                <div class="panel-indicators">
+                  <div class="panel-indicator">
+                    <span class="label">ЛЭП 110-150 кВ, шт</span>
+                    <span class="value">1</span>
+                  </div>
+                  <div class="panel-indicator">
+                    <span class="label">ЛЭП 110-150 кВ, шт</span>
+                    <span class="value">2</span>
+                  </div>
+                  <div class="panel-indicator">
+                    <span class="label">ПС 110 -150 кВ, шт</span>
+                    <span class="value">3</span>
+                  </div>
+                  <div class="panel-indicator">
+                    <span class="label">ПС 35 кВ, шт</span>
+                    <span class="value">4</span>
+                  </div>
+                </div>
+              </div>
+                <div class="panel-group">
+                  <div class="group-label">
+                    <span class="label">Отключенное оборудование<br>по сети 35-150 кВ</span>
+                  </div>
+                  <div class="panel-indicators">
+                    <div class="panel-indicator">
+                      <span class="label">ЛЭП 110-150 кВ, шт</span>
+                      <span class="value">1</span>
+                    </div>
+                    <div class="panel-indicator">
+                      <span class="label">ЛЭП 110-150 кВ, шт</span>
+                      <span class="value">2</span>
+                    </div>
+                    <div class="panel-indicator">
+                      <span class="label">ПС 110 -150 кВ, шт</span>
+                      <span class="value">3</span>
+                    </div>
+                    <div class="panel-indicator">
+                      <span class="label">ПС 35 кВ, шт</span>
+                      <span class="value">4</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
               <table class="d-flex operative-situation-reports w-100 mat-elevation-z1">
                 <tr>
                   <th colspan="4" scope="colgroup" class="top border-right" style="border-color: #E0E0E0 !important;">Отключенное оборудование по сети 35-150 кВ</th>
