--- a/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.less
@@ -3,7 +3,7 @@
 @application-header-title-line-height: @application-header-title-font-size + 4px;
 @application-header-title-font-color: #546e7a;
 @application-header-subtitle-font-family: 'Open Sans Light';
-@application-header-subtitle-font-size: 17px;
+@application-header-subtitle-font-size: 15px;
 @application-header-subtitle-font-color: #546e7a;
 
 .mat-progress-bar {
@@ -28,6 +28,7 @@
   .application-subtitle {
     font-family: @application-header-subtitle-font-family;
     font-size: @application-header-subtitle-font-size;
+    text-transform: uppercase;
     color: @application-header-subtitle-font-color;
   }
 }
