--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.less
@@ -135,8 +135,9 @@
 .row-caption {
   display: block;
   margin-bottom: 20px;
-  font-family: 'Open Sans Regular';
-  font-size: 18px;
+  font-family: 'Open Sans Light';
+  font-size: 16px;
+  text-transform: uppercase;
   color: #778f9b;
 }
 
@@ -149,4 +150,94 @@
   font-family: 'Open Sans light';
   font-size: 18px;
   color: #90a4ae;
+}
+
+.panel {
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  background: white;
+  border-radius: 4px;
+
+  .panel-group {
+    display: flex;
+    flex-direction: column;
+    margin-right: 10px;
+    align-items: center;
+
+    &:last-of-type {
+      margin-right: 0px;
+    }
+
+    .group-label {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      width: 80%;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      padding-left: 20px;
+      padding-right: 20px;
+      border-left: 1px solid #80cbc4;
+      border-right: 1px solid #80cbc4;
+      border-top: 1px solid #80cbc4;
+
+
+      .label {
+        margin-top: -10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        font-family: 'Open Sans Light';
+        font-size: 13px;
+        line-height: 13px;
+        color: #00695c;
+        text-align: center;
+        background: white;
+      }
+    }
+
+    .panel-indicators {
+      display: flex;
+      flex-direction: row;
+
+      .panel-indicator {
+        display: flex;
+        flex-direction: column;
+        width: 80px;
+        height: 80px;
+        padding: 10px;
+        border: 1px solid #cfd8dc;
+        border-right: none;
+
+        &:first-of-type {
+          border-top-left-radius: 4px;
+          border-bottom-left-radius: 4px;
+        }
+
+        &:last-of-type {
+          border-right: 1px solid #cfd8dc;
+          border-top-right-radius: 4px;
+          border-bottom-right-radius: 4px;
+        }
+
+        .label {
+          font-family: 'Open Sans Light';
+          font-size: 11px;
+          line-height: 11px;
+          text-align: center;
+        }
+
+        .value {
+          display: flex;
+          flex-direction: column;
+          flex: 1;
+          justify-content: center;
+          align-items: center;
+          font-family: "Open Sans Light";
+          font-size: 20px;
+          text-align: center;
+        }
+      }
+    }
+  }
 }
