OSR2: Report visual changes

--- a/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.less
@@ -116,7 +116,7 @@
           font-family: 'Open Sans Regular';
           font-size: 15px;
           color: #b0bec5;
-          border: 1px solid #b0bec5;
+          border: 1px solid #cfd8dc;
           border-radius: 2.5px;
           cursor: pointer;
 
@@ -126,7 +126,7 @@
 
           &:hover {
             color: #90a4ae;
-            border-color: #90a4ae;
+            border-color: #b0bec5;
           }
 
           &.selected {
