--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
@@ -11,7 +11,6 @@
     </div>
   </div>
 
-  <ng-container *ngIf=""></ng-container>
   <div class="row pt-4 pb-4" *ngIf="selectedReport$ | async">
     <div class="col-12">
       <div class="row">
@@ -25,31 +24,9 @@
           <div class="row">
             <div class="col-12">
 
-              <div class="panel mat-elevation-z1 mb-3">
-                <div class="panel-group">
-                <div class="group-label">
-                  <span class="label">Отключенное оборудование<br>по сети 35-150 кВ</span>
-                </div>
-                <div class="panel-indicators">
-                  <div class="panel-indicator">
-                    <span class="label">ЛЭП 110-150 кВ, шт</span>
-                    <span class="value">1</span>
-                  </div>
-                  <div class="panel-indicator">
-                    <span class="label">ЛЭП 110-150 кВ, шт</span>
-                    <span class="value">2</span>
-                  </div>
-                  <div class="panel-indicator">
-                    <span class="label">ПС 110 -150 кВ, шт</span>
-                    <span class="value">3</span>
-                  </div>
-                  <div class="panel-indicator">
-                    <span class="label">ПС 35 кВ, шт</span>
-                    <span class="value">4</span>
-                  </div>
-                </div>
-              </div>
-                <div class="panel-group">
+              <div class="panel mat-elevation-z1 mb-3 justify-content-between">
+                <div class="d-flex flex-row">
+                  <div class="panel-group">
                   <div class="group-label">
                     <span class="label">Отключенное оборудование<br>по сети 35-150 кВ</span>
                   </div>
@@ -69,6 +46,67 @@
                     <div class="panel-indicator">
                       <span class="label">ПС 35 кВ, шт</span>
                       <span class="value">4</span>
+                    </div>
+                  </div>
+                </div>
+                  <div class="panel-group connected">
+                    <div class="group-label">
+                      <span class="label">Последствия<br>для потребителей</span>
+                    </div>
+                    <div class="panel-indicators">
+                      <div class="panel-indicator">
+                        <span class="label">ЛЭП 110-150 кВ, шт</span>
+                        <span class="value">1</span>
+                      </div>
+                      <div class="panel-indicator">
+                        <span class="label">ЛЭП 110-150 кВ, шт</span>
+                        <span class="value">2</span>
+                      </div>
+                      <div class="panel-indicator">
+                        <span class="label">ПС 110 -150 кВ, шт</span>
+                        <span class="value">3</span>
+                      </div>
+                      <div class="panel-indicator">
+                        <span class="label">ПС 35 кВ, шт</span>
+                        <span class="value">4</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="d-flex flex-row justify-content-end">
+                  <div class="panel-group">
+                    <div class="group-label">
+                      <span class="label">Распред. сеть</span>
+                    </div>
+                    <div class="panel-indicators">
+                      <div class="panel-indicator">
+                        <span class="label">ЛЭП 110-150 кВ, шт</span>
+                        <span class="value">1</span>
+                      </div>
+                      <div class="panel-indicator">
+                        <span class="label">ЛЭП 110-150 кВ, шт</span>
+                        <span class="value">2</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel-group connected">
+                    <div class="group-label">
+                      <span class="label">Последствия для потребителей</span>
+                    </div>
+                    <div class="panel-indicators">
+                      <div class="panel-indicator">
+                        <span class="label">ЛЭП 110-150 кВ, шт</span>
+                        <span class="value">1</span>
+                      </div>
+                      <div class="panel-indicator">
+                        <span class="label">ЛЭП 110-150 кВ, шт</span>
+                        <span class="value">2</span>
+                      </div>
+                      <div class="panel-indicator">
+                        <span class="label">ПС 110 -150 кВ, шт</span>
+                        <span class="value">3</span>
+                      </div>
                     </div>
                   </div>
                 </div>
