--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.less
@@ -162,29 +162,57 @@
   .panel-group {
     display: flex;
     flex-direction: column;
-    margin-right: 10px;
-    align-items: center;
+    // margin-right: 10px;
+    align-items: flex-start;
 
     &:last-of-type {
       margin-right: 0px;
+    }
+
+    &.connected {
+      .panel-indicators {
+        .panel-indicator {
+          &:first-of-type {
+            border-left: none;
+            border-top-left-radius: 0px;
+            border-bottom-left-radius: 0px;
+          }
+        }
+      }
+
+      &:host {
+        border: 1px solid red;
+        &:first-child {
+          .panel-indicators {
+            .panel-indicator {
+              &:last-of-type {
+                border-top-right-radius: 0px;
+                border-bottom-right-radius: 0px;
+              }
+            }
+          }
+        }
+      }
     }
 
     .group-label {
       display: flex;
       flex-direction: row;
       justify-content: center;
-      width: 80%;
+      align-self: center;
+      width: 90%;
+      height: 25px;
       margin-top: 10px;
-      margin-bottom: 20px;
-      padding-left: 20px;
-      padding-right: 20px;
+      margin-bottom: 5px;
+      padding-left: 15px;
+      padding-right: 15px;
       border-left: 1px solid #80cbc4;
       border-right: 1px solid #80cbc4;
       border-top: 1px solid #80cbc4;
 
 
       .label {
-        margin-top: -10px;
+        margin-top: -16px;
         padding-left: 10px;
         padding-right: 10px;
         font-family: 'Open Sans Light';
@@ -203,9 +231,9 @@
       .panel-indicator {
         display: flex;
         flex-direction: column;
-        width: 80px;
-        height: 80px;
-        padding: 10px;
+        width: 70px;
+        height: 70px;
+        padding: 5px;
         border: 1px solid #cfd8dc;
         border-right: none;
 
@@ -225,6 +253,7 @@
           font-size: 11px;
           line-height: 11px;
           text-align: center;
+          color: #78909c;
         }
 
         .value {
