--- a/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.html
@@ -15,9 +15,10 @@
     </div>
   </div>
   <div class="report">
-    <div class="semi-periods mb-4">
-      <span class="label">Промежуточные отчеты</span>
+    <div class="semi-periods">
+      <!--<span class="label">Промежуточные отчеты</span>-->
       <div class="tags">
+        <span class="tag">00:00</span>
         <span class="tag">00:30</span>
         <span class="tag">01:00</span>
         <span class="tag">01:30</span>
@@ -25,7 +26,6 @@
         <span class="tag">02:30</span>
       </div>
     </div>
-    <!-- <app-timeline class="mt-5"></app-timeline> -->
     <app-report *ngIf="!inConsumptionMode"></app-report>
     <app-consumption *ngIf="inConsumptionMode"></app-consumption>
   </div>
