--- a/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.less
@@ -106,11 +106,12 @@
       .tags {
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
-        margin-left: 20px;
+        flex: 1;
 
         .tag {
+          height: 36px;
           margin-right: 10px;
           padding: 5px 15px;
           font-family: 'Open Sans Regular';
@@ -121,7 +122,7 @@
           cursor: pointer;
 
           &:last-of-type {
-            margin-right: 0px;
+            // margin-right: 0px;
           }
 
           &:hover {
@@ -135,6 +136,7 @@
           }
         }
       }
+
     }
   }
 }
