--- a/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.less
@@ -39,3 +39,9 @@
   justify-content: flex-start;
   height: 100%;
 }
+
+#add-report-button {
+  position: fixed;
+  right: 40px;
+  bottom: 20px;
+}
