OSR2: Minor fixes

--- a/projects/operative-situation/src/app/features/operative-situation/components/timeline/timeline.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/timeline/timeline.component.less
@@ -103,7 +103,7 @@
           cursor: pointer;
 
           &:hover {
-            background: #b0bec5;
+            background: #90a4ae;
             border-style: solid;
             border-color: @time-mark-border-color;
           }
