--- a/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.html
@@ -83,7 +83,7 @@
             mat-fab color="primary"
             matTooltip="Добавить отчет"
             matTooltipPosition="before"
-            *ngIf="selectedDivision$ | async"
+            *ngIf="(selectedDivision$ | async)?.isReportsAllowed === true"
             (click)="openAddReportDialog()">
       <mat-icon>add</mat-icon>
     </button>
