--- a/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.less
@@ -80,3 +80,12 @@
     }
   }
 }
+
+.form-hint-label {
+  min-height: 36px;
+  font-family: 'Open Sans Light';
+  font-size: 18px;
+  line-height: 18px;
+  color: #8fa3ad;
+  text-align: center;
+}
