--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
@@ -2,12 +2,14 @@
   <div class="row h-100" *ngIf="!(selectedReport$ | async)">
     <div class="no-report-placeholder col-12">
       Отчет об оперативной обстановке отсутствует
+      <!--
       <button mat-stroked-button
               class="mt-3"
               *ngIf="(selectedDivision$ | async) && (selectedDivision$ | async)?.isReportsAllowed"
               (click)="openAddReportDialog()">
         Добавить отчет
       </button>
+      -->
     </div>
   </div>
 
@@ -273,7 +275,7 @@
             <div class="col">
               <span class="row-caption">Погодные условия</span>
               <app-weather-summary
-                [weatherSummary]="(selectedReportWeatherSummary | async)"
+                [weatherSummary]="(selectedReport$ | async)?.weatherSummary"
                 [showMode]="true">
               </app-weather-summary>
             </div>
