OSR2: Backen refactor

--- a/projects/operative-situation/src/app/features/operative-situation/components/timeline/timeline.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/timeline/timeline.component.html
@@ -1,7 +1,7 @@
 <div class="timeline">
  <div class="period" *ngFor="let period of periods | async">
    <div class="marker"
-        [ngClass]="{'selected': (selectedTime$ | async) === period.start, 'with-data': getReportByTime(period.start)}"
+        [ngClass]="{'selected': (selectedTime$ | async)?.time === period.start, 'with-data': getReportByTime(period.start) === true}"
         (click)="selectPeriodAndTime(period, period.start)">
      <span class="label">{{period.start}}</span>
      <span class="marker-data"></span>
@@ -9,9 +9,9 @@
    <div class="time-marks">
      <span class="time-mark"
            *ngFor="let mark of period.marks"
-           [ngClass]="{'selected': (selectedReport$ | async)?.periodTime === mark, 'with-data': getReportByPeriodAndTime(period, mark)}"
-           (click)="selectPeriodAndTime(period, mark)"
-           matTooltip="{{getReportByPeriodAndTime(period, mark) ? mark : null}}" matTooltipPosition="above">
+           [ngClass]="{'selected': (selectedReport$ | async)?.periodTime === mark.time, 'with-data': getReportByTime(mark.time)}"
+           (click)="selectPeriodAndTime(mark)"
+           matTooltip="{{getReportByPeriodAndTime(period, mark.time) ? mark : null}}" matTooltipPosition="above">
      </span>
    </div>
    <div class="marker">
