OSR2: Timeline refactored

--- a/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.html
@@ -37,7 +37,7 @@
 
   <mat-drawer-content>
     <div class="container-fluid d-flex flex-column pt-3 pl-4 pr-4 pb-4 h-100">
-      <div class="row">
+      <div class="row mb-2">
 
         <div class="col">
           <div class="application-header">
@@ -72,7 +72,7 @@
 
       <div class="row flex-fill">
         <div class="col-12 pt-5">
-          <app-timeline class="mb-3 mt-3"></app-timeline>
+          <app-timeline class="mb-3 mt-5"></app-timeline>
           <app-reports-time-table></app-reports-time-table>
           <!-- <app-report-add-dialog></app-report-add-dialog> -->
         </div>
